--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@types/node": "20.4.2",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.7",
+    "@types/react-slick": "^0.23.13",
     "i18next-parser": "^9.0.2",
     "i18next-scanner": "^4.6.0",
     "typescript": "5.1.6"
